--- a/src/components/todo/Todo.module.css
+++ b/src/components/todo/Todo.module.css
@@ -140,6 +140,11 @@ td {
     text-align: center;
   }
 
+  .addTodo input {
+    width: 60%;
+    min-width: 250px;
+  }
+
   .search input {
     width: 100%;
   }
